# desk-link

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  TODO.md  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: managed-diagnostics-monitor.yml  managed-relay-monitor.yml  services-ci.yml  windows-ci.yml  windows-signed-release.yml
.impeccable/: design.json
.superpowers/sdd/: task-1-report.md  task-3-report.md  task-6-report.md
apps/macos/: Info.plist  Package.swift
apps/windows/: Cargo.toml  build.rs
apps/windows-ui/: index.html  package.json  tsconfig.json  vite.config.ts
apps/windows-ui/src/: api.ts  connection-progress.test.ts  connection-progress.ts  controller-runtime-presentation.test.ts  controller-runtime-presentation.ts  controller-workspace.test.ts  controller-workspace.ts  controller.ts  device-credentials.test.ts  device-credentials.ts  file-queue-action.test.ts  file-queue-action.ts  file-queue-protection.test.ts  file-queue-protection.ts  file-transfer-activity.test.ts  file-transfer-activity.ts  file-transfer-history.test.ts  file-transfer-history.ts  file-transfer-metrics.test.ts  file-transfer-metrics.ts  file-transfer-recovery.test.ts  file-transfer-recovery.ts  h264-annex-b.test.ts  h264-annex-b.ts  host-status.test.ts  host-status.ts  html.ts  (+51 more)
apps/windows-ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows.manifest
apps/windows-ui/src-tauri/capabilities/: main.json
apps/windows-ui/src-tauri/src/: controller.rs  device_directory.rs  file_picker.rs  host.rs  lib.rs  local_relay.rs  main.rs  power.rs  updates.rs  video_mailbox.rs
apps/windows/assets/: desklink.manifest  desklink.rc
apps/windows/examples/: tray_preview.rs
apps/windows/src/: audio.rs  capture.rs  cloud_diagnostics.rs  configuration.rs  controller_settings.rs  diagnostic_sharing.rs  diagnostics.rs  encoder.rs  fixed_access.rs  identity.rs  input.rs  lib.rs  main.rs  recent_access.rs  runtime.rs  startup.rs  storage.rs  transfer.rs  transfer_recovery.rs  tray.rs  trusted.rs  window.rs
apps/windows/tests/: capture_smoke.rs  cloud_diagnostics_live.rs  encoder_contract.rs  encoder_smoke.rs  host_supervisor.rs  managed_relay_live.rs  pairing_approval.rs  runtime_authorization.rs  runtime_contract.rs  runtime_smoke.rs  trusted_store.rs
crates/desklink-crypto/: Cargo.toml
crates/desklink-crypto/src/: identity.rs  lib.rs  noise.rs  pairing.rs  resolver.rs
crates/desklink-crypto/tests/: handshake.rs
crates/desklink-ffi/: Cargo.toml
crates/desklink-ffi/include/: desklink.h
crates/desklink-ffi/src/: controller.rs  host.rs  host_worker.rs  lib.rs  worker.rs
crates/desklink-ffi/tests/: abi.rs  controller_runtime.rs  host_abi.rs  host_runtime.rs
crates/desklink-protocol/: Cargo.toml
crates/desklink-session/: Cargo.toml
crates/desklink-transport/: Cargo.toml
crates/desklink-transport/examples/: directory_probe.rs  relay_probe.rs
crates/desklink-transport/src/: direct_probe.rs  lan_candidate.rs  lib.rs  quic.rs  video_egress.rs  video_path.rs
crates/desklink-transport/tests/: localhost.rs
crates/desklink-video/: Cargo.toml
deploy/tencent-relay/: Dockerfile  README.md  compose.yml
docs/: Windows_macOS_iOS_个人远程桌面软件详细设计与开发文档.md  cloud-diagnostics.md  relay-operations.md  windows-0.1.25-two-pc-acceptance.md  windows-0.1.26-two-pc-acceptance.md  windows-0.1.27-clipboard-file-transfer.md  windows-0.1.28-transfer-recovery.md  windows-0.1.29-system-audio.md  windows-0.1.30-opus-audio.md  windows-0.1.31-bidirectional-file-transfer.md  windows-0.1.32-file-queue-and-drag-drop.md  windows-0.1.33-transfer-visibility.md  windows-0.1.34-transfer-ui-isolation.md  windows-0.1.35-video-quality.md  windows-0.1.36-adaptive-video-quality.md  windows-0.1.37-remote-scaling.md  windows-0.1.38-remote-navigation.md  windows-0.1.39-keyboard-modifiers.md  windows-0.1.40-display-switch-hardening.md  windows-0.1.41-input-generation-isolation.md  windows-0.1.42-trusted-release-check.md  windows-0.1.43-smart-clipboard-paste.md  windows-0.1.44-protocol-compatibility.md  windows-0.1.45-reliable-file-receive.md  windows-0.1.46-transfer-timeout-recovery.md  windows-0.1.47-explicit-file-resume.md  windows-0.1.48-file-resume-preflight.md  windows-0.1.49-cross-restart-file-recovery.md  windows-0.1.50-device-bound-file-recovery.md  windows-0.1.51-durable-file-queue.md  windows-0.1.52-file-queue-protection-status.md  windows-0.1.53-file-queue-command-ack.md  windows-0.1.54-smooth-video.md  windows-0.1.55-true-fullscreen.md  windows-0.1.56-live-session-experience.md  windows-0.1.57-video-freshness-control.md  windows-0.1.58-video-continuity-recovery.md  windows-0.1.59-bounded-video-ipc.md  windows-0.1.60-video-delivery-self-healing.md  windows-0.1.61-performance.md  (+35 more)
scripts/: audit-managed-diagnostics.py  audit-managed-relay.py  build-linux-relay-image.py  build-macos-arm64.sh  build-windows-installer.py  build-windows.ps1  check-windows-release-ready.py  configure-github-windows-signing.py  create-windows-acceptance-record.py  deploy-diagnostics-service.py  deploy-managed-relay.py  generate-windows-assets.py  prepare-windows-signing-certificate.py  publish-windows-release.py  repair-managed-diagnostics-ingress.py  run-windows-cargo.py  sign-windows-artifact.py  verify-macos-runtime.sh  verify-managed-relay.py  verify-windows-release.py  verify-windows-resilience.py  verify.sh  windows_native_build_env.py
scripts/tests/: test_managed_diagnostics_audit.py  test_managed_relay_audit.py  test_windows_release_publish.py  test_windows_release_ready.py  test_windows_release_scope.py  test_windows_signing.py
server/diagnostics/: package.json  tsconfig.json
server/relay/: Cargo.toml
server/relay/src/: lib.rs  main.rs
server/relay/tests/: session.rs
tests/end-to-end/: Cargo.toml
tests/end-to-end/src/: main.rs
tests/end-to-end/tests/: recovery.rs
tools/windows-installer/: Cargo.toml  build.rs
tools/windows-installer/assets/: installer.manifest  installer.rc
tools/windows-installer/src/: lib.rs  main.rs
(+91 files in other folders)
