[workspace]
resolver = "2"
members = [
  "crates/desklink-protocol",
  "crates/desklink-video",
  "crates/desklink-session",
  "crates/desklink-crypto",
  "crates/desklink-transport",
  "crates/desklink-ffi",
  "apps/windows",
  "tools/windows-installer",
  "tests/end-to-end",
  "server/relay",
]
exclude = [
  "vendor/blake2-0.10.6",
  "vendor/snow-0.9.6",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
bytes = "1"
desklink-protocol = { path = "crates/desklink-protocol" }
desklink-video = { path = "crates/desklink-video" }
desklink-session = { path = "crates/desklink-session" }
desklink-crypto = { path = "crates/desklink-crypto" }
desklink-ffi = { path = "crates/desklink-ffi" }
desklink-transport = { path = "crates/desklink-transport" }
quinn = "0.11"
rand_core = { version = "0.6", features = ["getrandom"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1", features = ["derive"] }
subtle = "2.6"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
