[package]
name = "desklink-windows"
version = "0.1.78"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
installer-gui = []

[lib]
name = "apps_windows"
path = "src/lib.rs"

[dependencies]
blake2 = "0.10"
desklink-crypto.workspace = true
desklink-protocol.workspace = true
desklink-session.workspace = true
desklink-transport.workspace = true
desklink-video.workspace = true
ed25519-dalek = "2.2"
rand_core.workspace = true
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
tokio.workspace = true
zeroize = "1.8"

[target.'cfg(windows)'.dependencies]
opus-head-sys = { version = "0.3.1", default-features = false }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Media_MediaFoundation",
    "Win32_Networking_WinHttp",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
desklink-ffi.workspace = true
desklink-relay = { path = "../../server/relay" }
quinn.workspace = true
rcgen.workspace = true
rustls.workspace = true

[build-dependencies]
embed-resource = "3.0"
