[package]
name = "desklink-ffi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
desklink-crypto.workspace = true
desklink-protocol.workspace = true
desklink-session.workspace = true
rand_core.workspace = true
