[package]
name = "desklink-ffi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
desklink-crypto.workspace = true
desklink-protocol.workspace = true
desklink-session.workspace = true
desklink-transport.workspace = true
desklink-video.workspace = true
ed25519-dalek = "3.0"
rand_core.workspace = true
thiserror.workspace = true
tokio.workspace = true
zeroize = "1.8"

[dev-dependencies]
desklink-relay = { path = "../../server/relay" }
quinn.workspace = true
rcgen.workspace = true
rustls.workspace = true
