[package]
name = "desklink-installer"
version = "0.1.60"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "desklink_delivery_layout"
path = "src/lib.rs"

[[bin]]
name = "desklink-installer"
path = "src/main.rs"
test = false
bench = false

[features]
embedded-payload = []

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
embed-resource = "3.0"
