[package]
name = "desklink-windows-ui"
version = "0.1.66"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Modern Windows control surface for the DeskLink host"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "desklink_windows_ui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "desklink-windows-ui"
path = "src/main.rs"
test = false
bench = false

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[target.'cfg(windows)'.dependencies]
apps-windows = { package = "desklink-windows", path = "../../windows" }
blake2 = "0.10"
bytes.workspace = true
desklink-crypto.workspace = true
desklink-ffi.workspace = true
desklink-protocol.workspace = true
desklink-session.workspace = true
desklink-transport.workspace = true
desklink-video.workspace = true
rand_core.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots"] }
serde.workspace = true
serde_json = "1"
tauri = { version = "2.11.5", features = ["tray-icon"] }
tauri-plugin-single-instance = "2.4.3"
tokio.workspace = true
zeroize = "1.8"
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_Networking_WinSock",
  "Win32_System_Power",
  "Win32_System_Com",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
